# src/main/java/io/swagger/api/MeasurementsApiController.java
@@ -1,61 +1,82 @@
 package java.io.swagger.api;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import io.swagger.api.MeasurementsApi;
 import io.swagger.model.Measurement;
-import io.swagger.model.MeasurementResponse;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.enums.ParameterIn;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.media.ArraySchema;
+import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.CookieValue;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.multipart.MultipartFile;
+
 import javax.validation.Valid;
+import javax.validation.constraints.*;
 import javax.servlet.http.HttpServletRequest;
 import java.io.IOException;
+import java.util.List;
+import java.util.Map;
 
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2025-01-14T09:57:24.496581260Z[GMT]")
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2025-01-16T11:52:43.332412975Z[GMT]")
 @RestController
-public class MeasurementsApiController implements MeasurementsApi {
+public class MeasurementsApiController implements MeasurementsApi
+{
+
     private static final Logger log = LoggerFactory.getLogger(MeasurementsApiController.class);
     private final ObjectMapper objectMapper;
     private final HttpServletRequest request;
 
-    @Autowired
-    public MeasurementsApiController(ObjectMapper objectMapper, HttpServletRequest request) {
+    @org.springframework.beans.factory.annotation.Autowired
+    public MeasurementsApiController(ObjectMapper objectMapper, HttpServletRequest request)
+    {
         this.objectMapper = objectMapper;
         this.request = request;
     }
 
     @Override
-    public ResponseEntity<MeasurementResponse> measurementsPost(
-            @Parameter(name = "Measurement", description = "", required = true)
-            @Valid @RequestBody Measurement measurement
-    )
-    {
+    public ResponseEntity<Measurement> measurementsPost(
+            @Parameter(in = ParameterIn.DEFAULT, description = "", required=true, schema=@Schema())
+            @Valid @RequestBody Measurement body
+) {
         String accept = request.getHeader("Accept");
 
-        if (accept != null && accept.contains("application/json")) {
-            try {
-                return new ResponseEntity<MeasurementResponse>(objectMapper.readValue("{\n  \"raining\" : true,\n  \"sensor\" : {\n    \"name\" : \"name\"\n  },\n  \"id\" : 0,\n  \"value\" : 6.0274563\n}", MeasurementResponse.class), HttpStatus.NOT_IMPLEMENTED);
+        if (accept != null && accept.contains("application/json"))
+        {
+            try
+            {
+                return new ResponseEntity<Measurement>(objectMapper.readValue("{\n  \"raining\" : true,\n  \"sensor\" : {\n    \"name\" : \"name\",\n    \"id\" : 0\n  },\n  \"value\" : 0.8008282\n}", Measurement.class), HttpStatus.NOT_IMPLEMENTED);
             }
-            catch (IOException e) {
+            catch (IOException e)
+            {
                 log.error("Couldn't serialize response for content type application/json", e);
-                return new ResponseEntity<MeasurementResponse>(HttpStatus.INTERNAL_SERVER_ERROR);
+                return new ResponseEntity<Measurement>(HttpStatus.INTERNAL_SERVER_ERROR);
             }
         }
 
-        return new ResponseEntity<MeasurementResponse>(HttpStatus.NOT_IMPLEMENTED);
+        return new ResponseEntity<Measurement>(HttpStatus.NOT_IMPLEMENTED);
     }
 
     @Override
     public ResponseEntity<Integer> measurementsRainyDaysCountGet()
     {
         String accept = request.getHeader("Accept");
+
         if (accept != null && accept.contains("application/json"))
         {
             try
@@ -71,4 +92,5 @@ public class MeasurementsApiController implements MeasurementsApi {
 
         return new ResponseEntity<Integer>(HttpStatus.NOT_IMPLEMENTED);
     }
+
 }
