# swagger/openapi.yaml
@@ -1,11 +1,11 @@
 openapi: 3.0.0
 info:
   title: MyMeteo
-  description: service for receiving data from the sensor on the OpenAPI 3.0 specification.
-  version: 1.0.0
+  description: service for receiving data from the sensor on the OpenAPI 3.0 specification.й.
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
+  version: 1.0.0
 
 paths:
   /users/register:
@@ -23,8 +23,7 @@ paths:
           content:
             application/json:
               schema:
-                type: string
-                example: "User registered successfully."
+                $ref: '#/components/schemas/User'
         '400':
           description: Ошибка при регистрации пользователя
           content:
@@ -48,19 +47,19 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SensorRegistrationResponse'
+                $ref: '#/components/schemas/Sensor'
 
     get:
-      summary: Получение всех измерений
+      summary: Получение всех сенсоров
       responses:
         '200':
-          description: Список всех измерений
+          description: Список всех сенсоров
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/MeasurementResponse'
+                  $ref: '#/components/schemas/Sensor'
 
   /measurements/rainyDaysCount:
     get:
@@ -90,71 +89,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/MeasurementResponse'
+                $ref: '#/components/schemas/Measurement'
+
 components:
   schemas:
-    Sensor:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          description: "Уникальный идентификатор сенсора"
-        name:
-          type: string
-          description: "Имя сенсора"
-      required:
-        - name
-
-    SensorRegistrationResponse:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          description: "Уникальный идентификатор сенсора"
-        name:
-          type: string
-          description: "Имя сенсора"
-
-    MeasurementResponse:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          description: "Уникальный идентификатор измерения"
-        value:
-          type: number
-          format: float
-          description: "Значение температуры"
-        raining:
-          type: boolean
-          description: "Флаг, указывающий на наличие осадков"
-        sensor:
-          $ref: '#/components/schemas/Sensor'
-
-    Measurement:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          description: "Уникальный идентификатор измерения"
-        value:
-          type: number
-          format: float
-          description: "Значение температуры"
-        raining:
-          type: boolean
-          description: "Флаг, указывающий на наличие осадков"
-        sensor:
-          $ref: '#/components/schemas/Sensor'
-      required:
-        - value
-        - raining
-        - sensor
-
     User:
       type: object
       properties:
@@ -175,3 +113,37 @@ components:
           type: string
           description: "Пароль пользователя"
           example: "secret"
+      required:
+        - username
+        - email
+        - password
+
+    Sensor:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: "Уникальный идентификатор сенсора"
+        name:
+          type: string
+          description: "Имя сенсора"
+      required:
+        - name
+
+    Measurement:
+      type: object
+      properties:
+        value:
+          type: number
+          format: float
+          description: "Значение измерения"
+        raining:
+          type: boolean
+          description: "Флаг, указывающий на наличие осадков"
+        sensor:
+          $ref: '#/components/schemas/Sensor'
+      required:
+        - value
+        - raining
+        - sensor
